--- a/ruleset/sca/oracle linux/9/cis_oracle_linux_9.yml
+++ b/ruleset/sca/oracle linux/9/cis_oracle_linux_9.yml
@@ -29,50 +29,18 @@ variables:
   $sshd_file: /etc/ssh/sshd_config
 
 checks:
-  # 1.1.1.1 Ensure mounting of squashfs filesystems is disabled. (Automated)
-  - id: 33500
-    title: "Ensure mounting of squashfs filesystems is disabled."
-    description: "The squashfs filesystem type is a compressed read-only Linux filesystem embedded in small footprint systems. A squashfs image can be used without having to first decompress the image."
-    rationale: "Removing support for unneeded filesystem types reduces the local attack surface of the system. If this filesystem type is not needed, disable it."
-    impact: 'As Snap packages utilizes squashfs as a compressed filesystem, disabling squashfs will cause Snap packages to fail. Snap application packages of software are self-contained and work across a range of Linux distributions. This is unlike traditional Linux package management approaches, like APT or RPM, which require specifically adapted packages per Linux distribution on an application update and delay therefore application deployment from developers to their software''s end-user. Snaps themselves have no dependency on any external store ("App store"), can be obtained from any source and can be therefore used for upstream software deployment.'
-    remediation: "Run the following script to disable squashfs: #!/usr/bin/env bash { l_mname=\"squashfs\" # set module name # Check if the module exists on the system if [ -z \"$(modprobe -n -v \"$l_mname\" 2>&1 | grep -Pi -- \"\\h*modprobe:\\h+FATAL:\\h+Module\\h+$l_mname\\h+not\\h+found\\h+in\\h+directory\")\" ]; then # Remediate loadable l_loadable=\"$(modprobe -n -v \"$l_mname\")\" [ \"$(wc -l <<< \"$l_loadable\")\" -gt \"1\" ] && l_loadable=\"$(grep -P -- \"(^\\h*install|\\b$l_mname)\\b\" <<< \"$l_loadable\")\" if ! grep -Pq -- '^\\h*install \\/bin\\/(true|false)' <<< \"$l_loadable\"; then echo -e \" - setting module: \\\"$l_mname\\\" to be not loadable\" echo -e \"install $l_mname /bin/false\" >> /etc/modprobe.d/\"$l_mname\".conf fi # Remediate loaded if lsmod | grep \"$l_mname\" > /dev/null 2>&1; then echo -e \" - unloading module \\\"$l_mname\\\"\" modprobe -r \"$l_mname\" fi # Remediate deny list if ! modprobe --showconfig | grep -Pq -- \"^\\h*blacklist\\h+$l_mname\\b\"; then echo -e \" - deny listing \\\"$l_mname\\\"\" echo -e \"blacklist $l_mname\" >> /etc/modprobe.d/\"$l_mname\".conf fi else echo -e \" - Nothing to remediate\\n - Module \\\"$l_mname\\\" doesn't exist on the system\" fi }."
-    compliance:
-      - cis: ["1.1.1.1"]
-      - cis_csc_v8: ["4.8"]
-      - cis_csc_v7: ["9.2"]
-      - cmmc_v2.0: ["CM.L2-3.4.7", "CM.L2-3.4.8", "SC.L2-3.13.6"]
-      - iso_27001-2013: ["A.13.1.3"]
-      - mitre_mitigations: ["M1050"]
-      - mitre_tactics: ["TA0005"]
-      - mitre_techniques: ["T1005"]
-      - pci_dss_v3.2.1: ["1.1.6", "1.2.1", "2.2.2", "2.2.5"]
-      - pci_dss_v4.0: ["1.2.5", "2.2.4", "6.4.1"]
-      - soc_2: ["CC6.3", "CC6.6"]
-    condition:
-    rules:
-
-  # 1.1.1.2 Ensure mounting of udf filesystems is disabled. (Automated)
-  - id: 33501
-    title: "Ensure mounting of udf filesystems is disabled."
-    description: "The udf filesystem type is the universal disk format used to implement ISO/IEC 13346 and ECMA-167 specifications. This is an open vendor filesystem type for data storage on a broad range of media. This filesystem type is necessary to support writing DVDs and newer optical disc formats."
-    rationale: "Removing support for unneeded filesystem types reduces the local attack surface of the system. If this filesystem type is not needed, disable it."
-    impact: "Microsoft Azure requires the usage of udf. udf should not be disabled on systems run on Microsoft Azure."
-    remediation: "Run the following script to disable the udf filesystem: #!/usr/bin/env bash { l_mname=\"udf\" # set module name # Check if the module exists on the system if [ -z \"$(modprobe -n -v \"$l_mname\" 2>&1 | grep -Pi -- \"\\h*modprobe:\\h+FATAL:\\h+Module\\h+$l_mname\\h+not\\h+found\\h+in\\h+directory\")\" ]; then # Remediate loadable l_loadable=\"$(modprobe -n -v \"$l_mname\")\" [ \"$(wc -l <<< \"$l_loadable\")\" -gt \"1\" ] && l_loadable=\"$(grep -P -- \"(^\\h*install|\\b$l_mname)\\b\" <<< \"$l_loadable\")\" if ! grep -Pq -- '^\\h*install \\/bin\\/(true|false)' <<< \"$l_loadable\"; then echo -e \" - setting module: \\\"$l_mname\\\" to be not loadable\" echo -e \"install $l_mname /bin/false\" >> /etc/modprobe.d/\"$l_mname\".conf fi # Remediate loaded if lsmod | grep \"$l_mname\" > /dev/null 2>&1; then echo -e \" - unloading module \\\"$l_mname\\\"\" modprobe -r \"$l_mname\" fi # Remediate deny list if ! modprobe --showconfig | grep -Pq -- \"^\\h*blacklist\\h+$l_mname\\b\"; then echo -e \" - deny listing \\\"$l_mname\\\"\" echo -e \"blacklist $l_mname\" >> /etc/modprobe.d/\"$l_mname\".conf fi else echo -e \" - Nothing to remediate\\n - Module \\\"$l_mname\\\" doesn't exist on the system\" fi }."
-    compliance:
-      - cis: ["1.1.1.2"]
-      - cis_csc_v8: ["4.8"]
-      - cis_csc_v7: ["9.2"]
-      - cmmc_v2.0: ["CM.L2-3.4.7", "CM.L2-3.4.8", "SC.L2-3.13.6"]
-      - iso_27001-2013: ["A.13.1.3"]
-      - mitre_mitigations: ["M1050"]
-      - mitre_tactics: ["TA0005"]
-      - mitre_techniques: ["T1005"]
-      - pci_dss_v3.2.1: ["1.1.6", "1.2.1", "2.2.2", "2.2.5"]
-      - pci_dss_v4.0: ["1.2.5", "2.2.4", "6.4.1"]
-      - soc_2: ["CC6.3", "CC6.6"]
-    condition:
-    rules:
-
+  ####################################
+  # 1 Initial Setup
+  ####################################
+  # 1.1 Filesystem Configuration
+  ####################################
+  # 1.1.1 Disable unused filesystems
+  ####################################
+  # 1.1.1.1 Ensure mounting of squashfs filesystems is disabled. (Automated) - Not Implemented
+  # 1.1.1.2 Ensure mounting of udf filesystems is disabled. (Automated) - Not Implemented
+ ####################################
+ # 1.1.2 Configure /tmp
+ ####################################
   # 1.1.2.1 Ensure /tmp is a separate partition. (Automated)
   - id: 33502
     title: "Ensure /tmp is a separate partition."
@@ -96,8 +64,10 @@ checks:
       - pci_dss_v3.2.1: ["1.1.6", "1.2.1", "2.2.2", "2.2.5"]
       - pci_dss_v4.0: ["1.2.5", "2.2.4", "6.4.1"]
       - soc_2: ["CC6.3", "CC6.6"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /tmp -> r:^/tmp\s'
+      - 'c:systemctl is-enabled tmp.mount -> r:static|generated'
 
   # 1.1.2.2 Ensure nodev option set on /tmp partition. (Automated)
   - id: 33503
@@ -118,8 +88,9 @@ checks:
       - pci_dss_v3.2.1: ["1.1.6", "1.2.1", "2.2.2", "2.2.5"]
       - pci_dss_v4.0: ["1.2.5", "2.2.4", "6.4.1"]
       - soc_2: ["CC6.3", "CC6.6"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /tmp -> r:nodev'
 
   # 1.1.2.3 Ensure noexec option set on /tmp partition. (Automated)
   - id: 33504
@@ -141,8 +112,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /tmp -> r:noexec'
 
   # 1.1.2.4 Ensure nosuid option set on /tmp partition. (Automated)
   - id: 33505
@@ -164,9 +136,13 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /tmp -> r:nosuid'
 
+ ####################################
+ # 1.1.3 Configure /var
+ ####################################
   # 1.1.3.1 Ensure separate partition exists for /var. (Automated)
   - id: 33506
     title: "Ensure separate partition exists for /var."
@@ -189,8 +165,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var -> r:^/var\s'
 
   # 1.1.3.2 Ensure nodev option set on /var partition. (Automated)
   - id: 33507
@@ -212,8 +189,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var -> r:nodev'
 
   # 1.1.3.3 Ensure nosuid option set on /var partition. (Automated)
   - id: 33508
@@ -235,9 +213,13 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var -> r:nosuid'
 
+ ####################################
+ # 1.1.4 Configure /var/tmp
+ ####################################
   # 1.1.4.1 Ensure separate partition exists for /var/tmp. (Automated)
   - id: 33509
     title: "Ensure separate partition exists for /var/tmp."
@@ -261,8 +243,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/tmp -> r:^/var/tmp\s'
 
   # 1.1.4.2 Ensure noexec option set on /var/tmp partition. (Automated)
   - id: 33510
@@ -284,8 +267,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/tmp -> r:noexec'
 
   # 1.1.4.3 Ensure nosuid option set on /var/tmp partition. (Automated)
   - id: 33511
@@ -307,8 +291,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/tmp -> r:nosuid'
 
   # 1.1.4.4 Ensure nodev option set on /var/tmp partition. (Automated)
   - id: 33512
@@ -330,9 +315,13 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
-
+      - 'c:findmnt --kernel /var/tmp -> r:nodev'
+ 
+ ####################################
+ # 1.1.5 Configure /var/log
+ ####################################
   # 1.1.5.1 Ensure separate partition exists for /var/log. (Automated)
   - id: 33513
     title: "Ensure separate partition exists for /var/log."
@@ -351,8 +340,9 @@ checks:
       - mitre_techniques: ["T0005", "T1499", "T1499.001"]
       - pci_dss_v3.2.1: ["10.7"]
       - soc_2: ["A1.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/log -> r:^/var/log\s'
 
   # 1.1.5.2 Ensure nodev option set on /var/log partition. (Automated)
   - id: 33514
@@ -374,8 +364,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/log -> r:nodev'
 
   # 1.1.5.3 Ensure noexec option set on /var/log partition. (Automated)
   - id: 33515
@@ -397,8 +388,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/log -> r:noexec'
 
   # 1.1.5.4 Ensure nosuid option set on /var/log partition. (Automated)
   - id: 33516
@@ -420,9 +412,13 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/log -> r:nosuid'
 
+ ####################################
+ # 1.1.6 Configure /var/log/audit
+ ####################################
   # 1.1.6.1 Ensure separate partition exists for /var/log/audit. (Automated)
   - id: 33517
     title: "Ensure separate partition exists for /var/log/audit."
@@ -442,8 +438,9 @@ checks:
       - mitre_techniques: ["T1499", "T1499.001"]
       - pci_dss_v3.2.1: ["10.7"]
       - soc_2: ["A1.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/log/audit -> r:^/var/log/audit\s'
 
   # 1.1.6.2 Ensure noexec option set on /var/log/audit partition. (Automated)
   - id: 33518
@@ -465,8 +462,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/log/audit -> r:noexec'
 
   # 1.1.6.3 Ensure nodev option set on /var/log/audit partition. (Automated)
   - id: 33519
@@ -488,8 +486,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/log/audit -> r:nodev'
 
   # 1.1.6.4 Ensure nosuid option set on /var/log/audit partition. (Automated)
   - id: 33520
@@ -511,9 +510,13 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /var/log/audit -> r:nosuid'
 
+ ####################################
+ # 1.1.7 Configure /home
+ ####################################
   # 1.1.7.1 Ensure separate partition exists for /home. (Automated)
   - id: 33521
     title: "Ensure separate partition exists for /home."
@@ -537,8 +540,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /home -> r:^/home\s'
 
   # 1.1.7.2 Ensure nodev option set on /home partition. (Automated)
   - id: 33522
@@ -560,8 +564,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /home -> r:nodev'
 
   # 1.1.7.3 Ensure nosuid option set on /home partition. (Automated)
   - id: 33523
@@ -583,9 +588,13 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /home -> r:nosuid'
 
+ ####################################
+ # 1.1.8 Configure /dev/shm
+ ####################################
   # 1.1.8.1 Ensure /dev/shm is a separate partition. (Automated)
   - id: 33524
     title: "Ensure /dev/shm is a separate partition."
@@ -609,8 +618,9 @@ checks:
       - pci_dss_v3.2.1: ["1.1.6", "1.2.1", "2.2.2", "2.2.5"]
       - pci_dss_v4.0: ["1.2.5", "2.2.4", "6.4.1"]
       - soc_2: ["CC6.3", "CC6.6"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /dev/shm -> r:^/dev/shm\s'
 
   # 1.1.8.2 Ensure nodev option set on /dev/shm partition. (Automated)
   - id: 33525
@@ -632,8 +642,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:mount -> r:\s/dev/shm\s && r:nodev'
 
   # 1.1.8.3 Ensure noexec option set on /dev/shm partition. (Automated)
   - id: 33526
@@ -655,8 +666,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:findmnt --kernel /dev/shm -> r:noexec'
 
   # 1.1.8.4 Ensure nosuid option set on /dev/shm partition. (Automated)
   - id: 33527
@@ -678,48 +690,15 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition:
+    condition: all
     rules:
+      - 'c:mount -> r:\s/dev/shm\s && r:nosuid'
 
-  # 1.1.9 Disable USB Storage. (Automated)
-  - id: 33528
-    title: "Disable USB Storage."
-    description: "USB storage provides a means to transfer and store files ensuring persistence and availability of the files independent of network connection status. Its popularity and utility has led to USB-based malware being a simple and common means for network infiltration and a first step to establishing a persistent threat within a networked environment."
-    rationale: "Restricting USB access on the system will decrease the physical attack surface for a device and diminish the possible vectors to introduce malware."
-    remediation: "Run the following script to disable usb-storage: #!/usr/bin/env bash { l_mname=\"usb-storage\" # set module name # Check if the module exists on the system if [ -z \"$(modprobe -n -v \"$l_mname\" 2>&1 | grep -Pi -- \"\\h*modprobe:\\h+FATAL:\\h+Module\\h+$l_mname\\h+not\\h+found\\h+in\\h+directory\")\" ]; then # Remediate loadable l_loadable=\"$(modprobe -n -v \"$l_mname\")\" [ \"$(wc -l <<< \"$l_loadable\")\" -gt \"1\" ] && l_loadable=\"$(grep -P -- \"(^\\h*install|\\b$l_mname)\\b\" <<< \"$l_loadable\")\" if ! grep -Pq -- '^\\h*install \\/bin\\/(true|false)' <<< \"$l_loadable\"; then echo -e \" - setting module: \\\"$l_mname\\\" to be not loadable\" echo -e \"install $l_mname /bin/false\" >> /etc/modprobe.d/\"$l_mname\".conf fi # Remediate loaded if lsmod | grep \"$l_mname\" > /dev/null 2>&1; then echo -e \" - unloading module \\\"$l_mname\\\"\" modprobe -r \"$l_mname\" fi # Remediate deny list if ! modprobe --showconfig | grep -Pq -- \"^\\h*blacklist\\h+$(tr '-' '_' <<< \"$l_mname\")\\b\"; then echo -e \" - deny listing \\\"$l_mname\\\"\" echo -e \"blacklist $l_mname\" >> /etc/modprobe.d/\"$l_mname\".conf fi else echo -e \" - Nothing to remediate\\n - Module \\\"$l_mname\\\" doesn't exist on the system\" fi }."
-    compliance:
-      - cis: ["1.1.9"]
-      - cis_csc_v8: ["10.3"]
-      - cis_csc_v7: ["13.7"]
-      - cmmc_v2.0: ["MP.L2-3.8.7"]
-      - hipaa: ["164.310(d)(1)"]
-      - iso_27001-2013: ["A.8.3.1"]
-      - mitre_mitigations: ["M1034"]
-      - mitre_tactics: ["TA0001", "TA0010"]
-      - mitre_techniques: ["T1091"]
-      - nist_sp_800-53: ["SC-18(4)"]
-    condition:
-    rules:
-
-  # 1.2.1 Ensure GPG keys are configured. (Manual)
-  - id: 33529
-    title: "Ensure GPG keys are configured."
-    description: "The RPM Package Manager implements GPG key signing to verify package integrity during and after installation."
-    rationale: "It is important to ensure that updates are obtained from a valid source to protect against spoofing that could lead to the inadvertent installation of malware on the system. To this end, verify that GPG keys are configured correctly for your system."
-    remediation: "Update your package manager GPG keys in accordance with site policy."
-    compliance:
-      - cis: ["1.2.1"]
-      - cis_csc_v8: ["7.3", "7.4"]
-      - cis_csc_v7: ["3.4", "3.5"]
-      - cmmc_v2.0: ["SI.L1-3.14.1"]
-      - mitre_mitigations: ["M1051"]
-      - mitre_tactics: ["TA0001"]
-      - mitre_techniques: ["T1195", "T1195.001"]
-      - nist_sp_800-53: ["SI-2"]
-      - pci_dss_v3.2.1: ["6.2"]
-      - soc_2: ["CC7.1"]
-    condition:
-    rules:
+  # 1.1.9 Disable USB Storage. (Automated) - Not Implemented
+  ####################################
+  #1.2 Configure Software Updates
+  ####################################
+  # 1.2.1 Ensure GPG keys are configured. (Manual) - Not Implemented
 
   # 1.2.2 Ensure gpgcheck is globally activated. (Automated)
   - id: 33530
